--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/react-dom": "^18.0.8",
     "bootstrap": "^5.2.2",
     "formik": "^2.2.9",
+    "leaflet": "^1.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.1.0",
     "react-markdown": "^8.0.3",
     "react-router-dom": "5.2",
     "react-scripts": "5.0.1",
@@ -47,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.0",
     "@types/react-router-dom": "^5.3.3"
   }
 }
